force-app/main/default/objects/NewRoles__c/NewRoles__c.object-meta.xml
<CustomObject>
    <label>New Roles</label>
    <nameField>
        <label>Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>