force-app/main/default/objects/NewRoles__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>NewRoles__c</referenceTo>
    <relationshipLabel>New Roles</relationshipLabel>
    <relationshipName>New_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>